[package]
name = "LearnRust"
version = "0.1.0"
authors = ["Kaciras <Kaciras@outlook.com>"]
edition = "2018"

[[bin]]
name = "guess"
path = "src/guess_number.rs"

[[bin]]
name = "minigrep"
path = "src/minigrep.rs"

[[bin]]
name = "hello_server"
path = "src/hello_server.rs"

[dependencies]
rand = "0.7"
